--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^1.0.2",
-    "superagent": "^5.0.5"
+    "superagent": "^5.0.5",
+    "velocity-react": "^1.4.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
